Add names to About Page

--- a/Crawl/Crawl/Views/AboutPage.xaml
+++ b/Crawl/Crawl/Views/AboutPage.xaml
@@ -196,6 +196,10 @@
                     </StackLayout>
                 </StackLayout> -->
                 </StackLayout>
+            <StackLayout>
+                <Label
+                    Text="Creators: Thomas Chin | Fisher Harris"/>
             </StackLayout>
+        </StackLayout>
     </ScrollView>
 </ContentPage>
