Get working skeleton for AutoBattle Engine and hook up XAML

--- a/Crawl/Crawl/Views/Battle/AutoBattlePage.xaml
+++ b/Crawl/Crawl/Views/Battle/AutoBattlePage.xaml
@@ -11,6 +11,11 @@
                 <Label Text="AutoBattle"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
+                
+                <Button Text="Auto Battle"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" 
+                Clicked="AutoBattleButton_Command"/>
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
