--- a/Crawl/Crawl/Views/Characters/CharacterDetailPage.xaml
+++ b/Crawl/Crawl/Views/Characters/CharacterDetailPage.xaml
@@ -36,7 +36,7 @@
 				<Label Text="Class : " 
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
-				<Label Text="{Binding Data.Class}" 
+				<Label Text="{Binding Data.Type}" 
                     FontSize="Small" 
                     HorizontalOptions="Center"/>
 			</StackLayout>
