Move Monster Type to its own Enum Class.

--- a/Crawl/Crawl/Views/Monsters/MonsterDetailPage.xaml
+++ b/Crawl/Crawl/Views/Monsters/MonsterDetailPage.xaml
@@ -38,7 +38,7 @@
                 <Label Text="Type : " 
                    FontSize="Small" 
                    HorizontalOptions="Start"/>
-				<Label Text="{Binding Data.type}" 
+				<Label Text="{Binding Data.Type}" 
                     FontSize="Small" 
                     HorizontalOptions="Center"/>
             </StackLayout>
