--- a/Crawl/Crawl/Views/Battle/AutoBattlePage.xaml
+++ b/Crawl/Crawl/Views/Battle/AutoBattlePage.xaml
@@ -8,15 +8,16 @@
             HorizontalOptions="Center" 
             VerticalOptions="Start"
             Orientation="Vertical">
-                <Label Text="AutoBattle"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-                
+                <Label  Text="AutoBattle"
+                        VerticalOptions="CenterAndExpand" 
+                        HorizontalOptions="CenterAndExpand"
+                        />
                 
                 <Button Text="Auto Battle"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" 
-                Clicked="AutoBattleButton_Command"/>
+                        VerticalOptions="CenterAndExpand" 
+                        HorizontalOptions="CenterAndExpand" 
+                        Clicked="AutoBattleButton_Command"
+                        />
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
